# dist_corr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: dist_corr_speed_binary_test.rs  dist_corr_speed_comparison.py  dist_corr_speed_comparison.rs  dist_corr_speed_default_test.rs  dist_corr_speed_test.rs  dist_corr_speed_timing.rs  frob_inner_prod_speed_test.rs  pyproject.toml
src/: api.rs  dist_corr.rs  dist_corr_binary.rs  dist_corr_fast.rs  dist_corr_multi.rs  dist_corr_naive.rs  frob_inner_product.rs  grand_mean.rs  lib.rs  ordering.rs
src/tests/: mod.rs  test.rs  test_binary.rs  test_determinism.rs  test_multi.rs
