[package]
name = "dist_corr"
version = "0.1.0"
authors = ["Martin Gebert"]
edition = "2021"

[dependencies]
itertools = "=0.14.0"
criterion = "=0.5.1"
rand_chacha = "0.3.1"
rand = "=0.8.5"
rayon = "=1.10.0"


#--------------------------------------------------
# Features

[[bench]]
name = "dist_corr_speed_binary_test"
path = "benches/dist_corr_speed_binary_test.rs"
harness = false

[[bench]]
name = "dist_corr_speed_test"
path = "benches/dist_corr_speed_test.rs"
harness = false

[[bench]]
name = "dist_corr_speed_default_test"
path = "benches/dist_corr_speed_default_test.rs"
harness = false

[[bench]]
name = "dist_corr_speed_timing"
path = "benches/dist_corr_speed_timing.rs"
harness = false
