[package]
name = "dist_corr"
version = "0.1.0"
edition = "2021"
authors = ["Martin Gebert", "Miru Lee"]
description = "A Rust library for computing distance correlation and related statistics."
license = "MIT"

[dependencies]
itertools = "=0.14.0"
criterion = "=0.8.2"
rand_chacha = "0.10.0"
rand = "=0.10.0"
rayon = "=1.11.0"
log = "0.4.29"


#--------------------------------------------------
# Features

[[bench]]
name = "dist_corr_speed_binary_test"
path = "benches/dist_corr_speed_binary_test.rs"
harness = false

[[bench]]
name = "dist_corr_speed_test"
path = "benches/dist_corr_speed_test.rs"
harness = false

[[bench]]
name = "dist_corr_speed_default_test"
path = "benches/dist_corr_speed_default_test.rs"
harness = false

[[bench]]
name = "dist_corr_speed_timing"
path = "benches/dist_corr_speed_timing.rs"
harness = false
