[tool.poetry]
name = "dist_corr"
version = "0.1.0"
description = ""
authors = ["Martin Gebert", "Miru Lee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.4"
pytest = "^9.0.2"
dcor = "^0.7"
pytest-benchmark = "^5.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
